--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.11.6",
         "@tailwindcss/forms": "^0.4.0",
         "autoprefixer": "^10.1.0",
         "axios": "^1.1.2",
+        "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.2.1",
         "postcss-import": "^14.0.1",
+        "sass": "^1.56.1",
         "tailwindcss": "^3.0.0",
         "vite": "^4.0.0"
     }
